feat: add branch API endpoint to create branch product
